- new methods ('fontSize', 'fontFamily', 'fontStyle' and 'fontWeight') to manage font of txt object.
- Remove GuidoQt library dependency and integrate source file.
- Inscrease default size of guido item.
- Add default size and font to text item to have same rendering on different plateform (default to Arial 13px)
- Add 'arrows' attribute to 'line' objects.
- Bug correction :
	When ask for multiple exports, all are now treated and not only the last.
- incoming messages buffer size increased to 10.000
- url support for inscore files (load message)
- bug in export item corrected : child scaling was not applied.
- bug in fullscreen support corrected : the model was incorrect when switching to fullscreen using 
  the window controlers. It was resulting in spurious fullscreen mode exit.

----------------------------------------------------
Version 1.11
- new common queries ('get' message) : count and rcount that give the enclosed objects count
  and a recursive count. The messages are supported at scene and application level as well.
- new 'memimg' object that capture the image of any object hierarchy including scenes
- supports relative OSC addresses that are evaluated in the context of the target object 
  (i.e. a scene for drag & drop operations, arbitrary objects with the 'eval' method)
- new 'eval' method that takes a message list as argument, provided as a context for relative 
  addresses evaluation
- new 'httpd' object that implements an http server providing images of the scene to remote clients.
- new 'websocket' object that implements a websocket server providing images of the scene to remote 
  clients but also changes notifications.
- Guido font is now embed in INScore application.
- Partial support on IOS. Main problems are: antialiasing is not working and multi scene scores 
  are not correctly handled.

----------------------------------------------------
Version 1.10