@@ -235,7 +235,7 @@ They could be sent to any address with the form \OSC{/ITL/\textit{scene}} or \OS
 \begin{rail}
 commonMsg :  ('show' int32)
 			| 'del'
-			| 'export' ([1] ( fullPathFileName) | [2] path | [3])(|'children')
+			| ('export' | 'exportAll') ((([1] filePath )+) | [2])
 			| 'save' (| 'message' +) filePath ( | '+')
 			| PositionMsg
 			| ColorMsg
@@ -251,13 +251,10 @@ commonMsg :  ('show' int32)
 \item \OSC{show}: shows or hides the destination object. The parameter is interpreted as a boolean value. Default value is \values{1}. 
 \item \OSC{del}: deletes the destination object. 
 
-\item \OSC{export}: exports an object to an image file. \\
-1) exports to a full path name. The file extension is used to infer the export format. Supported extensions and formats are: \emph{pdf, bmp, gif, jpeg, png, pgm, ppm, tiff, xbm, xpm}. \\
-2) exports to \OSC{path/\textit{identifier}.pdf}. \\
-When path is a relative path, exports to \OSC{rootPath/path/\textit{identifier}.pdf}. \\
-3) exports to \OSC{rootPath/\textit{identifier}.pdf}.\\
-When the destination file is not completely specified (third form or missing extension), there is an automatic numbering of output names when the destination file already exists. \\ 
-The 'children' option specify that we want to export the children of the object as well.
+\item \OSC{export} and \OSC{exportAll}: exports an object to an image file respectively without or with childrens. If the exported object is a scene, childrens are always exported.\\
+1) exports to the \OSC{filePath} name. The \OSC{filePath} can be relative or absolute. When the filename is not specified, exports to \OSC{path/\textit{identifier}.pdf}. The file extension is used to infer the export format. Supported extensions and formats are: \emph{pdf, bmp, gif, jpeg, png, pgm, ppm, tiff, xbm, xpm}. \\
+2) exports to \OSC{rootPath/\textit{identifier}.pdf}.\\
+When the destination file is not completely specified (second form or missing extension), there is an automatic numbering of output names when the destination file already exists. \\ 
 
 \item \OSC{save}: recursively saves objects states to a file. When a \OSC{message} list is present, only the specified attributes are saved. The \OSC{filePath} can be relative or absolute. When relative, an absolute path is build using the current \OSC{rootPath} (see application or scene current paths  p.\pageref{applmgmt} and  p.\pageref{scene}). The optional \OSC{+} parameter indicates an append mode for the write operation. The message must be sent to the address \OSC{/ITL} to save the whole application state.\\
 \textbf{Note}: when a list of attributes is specified, unknown attributes are silently ignored. \\
