@@ -305,9 +305,9 @@ void VSceneView::updateView( IScene * scene )
 	fGraphicsView->setScene (scene);
 
 	// Export
-	std::string filename = scene->getNextExportFlag();
-	while ( filename.length() ) {
-		VExport::exportScene( fGraphicsView , filename.c_str() );
+	std::pair<std::string, bool> myExport = scene->getNextExportFlag();
+	while ( myExport.first.length() ) {
+		VExport::exportScene( fGraphicsView , myExport.first.c_str() );
 		const IMessageList*	msgs = scene->getMessages(EventsAble::kExport);
 		if (msgs) {
 			MouseLocation mouse (0, 0, 0, 0, 0, 0);
@@ -316,7 +316,7 @@ void VSceneView::updateView( IScene * scene )
 			SIMessageList outmsgs = me.eval (msgs, env);
 			if (outmsgs && outmsgs->list().size()) outmsgs->send();
 		}
-		filename = scene->getNextExportFlag();
+		myExport = scene->getNextExportFlag();
 	}
 }
 
