@@ -21,6 +21,8 @@ Version 1.12
 - Inscrease default size of guido item.
 - Add default size and font to text item to have same rendering on different plateform (default to Arial 13px)
 - Add 'arrows' attribute to 'line' objects.
+- The 'export' method can take multiple file path. 'children' parameter is deleted of the API.
+- Add support of Qt javascript engine (QJSEngine).
 - Bug correction :
 	When ask for multiple exports, all are now treated and not only the last.
 - incoming messages buffer size increased to 10.000
